Added message removing feature
